# SoFragmentUI

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ollama.rs  search.rs
src/components/: ChatInterface.tsx
src/types/: chat.ts  ollama.ts
